Fix broken menu background on mobile

--- a/components/layout/header.module.scss
+++ b/components/layout/header.module.scss
@@ -138,7 +138,7 @@
           padding: 20px 0 20px;
           height: auto;
           opacity: 1;
-          max-height: 200px;
+          max-height: 275px;
         }
       }
 
